# poetic

./: README.md  pyproject.toml
src/poetic/: __init__.py  core.py  logger.py  package.py  package_setup.py  tree.py
src/poetic/templates/: Python.gitignore  conftest.py  foo.py  test_foo.py
